fix z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 100;
 }
 
 .navBar a {
